--- a/explorer.ipynb
+++ b/explorer.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,6 +102,8 @@
     "        arr.append(np.array(s2.GetRasterBand(i).ReadAsArray()).flatten())\n",
     "\n",
     "    return np.array(arr).T\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -129,6 +131,115 @@
     "\n",
     "stacked = np.hstack([arr1, arr2, arr3, arr4, arr5, arr6])\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_s2_tif_path(year, month, locid):\n",
+    "    return \"C:/Users/QA/Documents/umap4eo/data/sentinel-2/{locid}/{locid}_{year}_{month}.tif\".format(locid=locid[4:], year=year, month=month)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "C:/Users/QA/Documents/umap4eo/data/sentinel-2/1311_3077_13/1311_3077_13_2018_01.tif\n"
+     ]
+    }
+   ],
+   "source": [
+    "path  = get_s2_tif_path(\"2018\", \"01\", \"10N/1311_3077_13\")\n",
+    "print(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(1048576, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(get_tif_as_array(path).shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob\n",
+    "def get_planet_tif_path(year, month, locid):\n",
+    "    return glob.glob(\"C:/Users/QA/Documents/umap4eo/data/planet/{locid}/L3H-SR/{year}-{month}*\".format(locid=locid, year=year, month=month))\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['C:/Users/QA/Documents/umap4eo/data/planet/10N/1311_3077_13/L3H-SR\\\\2018-04-01.tif', 'C:/Users/QA/Documents/umap4eo/data/planet/10N/1311_3077_13/L3H-SR\\\\2018-04-07.tif', 'C:/Users/QA/Documents/umap4eo/data/planet/10N/1311_3077_13/L3H-SR\\\\2018-04-14.tif', 'C:/Users/QA/Documents/umap4eo/data/planet/10N/1311_3077_13/L3H-SR\\\\2018-04-21.tif', 'C:/Users/QA/Documents/umap4eo/data/planet/10N/1311_3077_13/L3H-SR\\\\2018-04-28.tif']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(get_planet_tif_path(\"2018\", \"04\", \"10N/1311_3077_13\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_monthly_stack(year, month, locid):\n",
+    "    pathlist = get_planet_tif_path(year, month, locid)\n",
+    "    pathlist.append(get_s2_tif_path(year, month, locid))\n",
+    "\n",
+    "    arrlist = []\n",
+    "\n",
+    "    for path in pathlist:\n",
+    "        arrlist.append(get_tif_as_array(path))\n",
+    "\n",
+    "    return np.hstack(arrlist)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(1048576, 30)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(get_monthly_stack(\"2018\", \"04\", \"10N/1311_3077_13\").shape)"
    ]
   },
   {
